--- a/clientes/mutualista_1aVRUTxWvNP/css/estilos.css
+++ b/clientes/mutualista_1aVRUTxWvNP/css/estilos.css
@@ -21,7 +21,7 @@ button:hover, input[type="submit"]:hover{background-color: #f7931e; color: white
 
 /*form*/
 .encuesta {margin: 0px 100px}
-.pregunta {margin: 80px auto}
+.pregunta {margin: 100px auto}
 .opciones{display: flex; justify-content: space-around; max-width: 500px; margin: 0 auto}
 .opcion{max-width: 33%;}
 .opcion input, .opcion label{display: block; cursor: pointer;}
@@ -29,13 +29,12 @@ input {display: block;}
 input[type="radio"]{background-color: red; padding: 50px; display: inline-block; cursor: pointer;}
 textarea{background-color: white; border: #00135b 2px solid; border-radius: 20px; padding: 20px; resize: none; font-size: 18px}
 
-.formulario h3 {text-transform: uppercase; font-size: 28px}
+.formulario h3 {font-size: 28px}
 .formulario p {color: #f7931e; font-size: 12px; }
 .formulario label {font-size: 24px }
 
 /*agradecimiento*/
-.agradecimiento h2 {font-weight: 700; text-transform: uppercase; font-size: 38px;
-	margin: 30px 160px}
+.agradecimiento h2 {font-weight: 700; font-size: 38px;	margin: 30px 160px}
 .agradecimiento .codigo {background-color: #00135b; color: white; font-weight: 700;
 	font-size: 24px; padding: 10px 15px; border-radius: 20px; max-width: 250px; margin: 30px auto;
 	margin-bottom: 2px;}
